<resources>
    <string name="app_name">SIT Folks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Not registered yet ? Click here</string>
    <string name="welcome_bar">Welcome</string>
    <string name="result">Results</string>
    <string name="loading">Loading......</string>
    <string name="drawer_close">close drawer</string>
    <string name="drawer_open">open drawer</string>
    <string name="tag">Made With ❤ by SITian </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Blank">Under Construction !!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_image_view">imageView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_imageview_screen">ImageviewScreen</string>
</resources>
